Fix header search alignment

--- a/app/_components/header/_header.scss
+++ b/app/_components/header/_header.scss
@@ -34,8 +34,3 @@
   @include govuk-font(19);
   margin: 0;
 }
-
-.app-header .app-site-search:defined {
-  margin: 0;
-  padding: 0;
-}
